--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- YOUR CSS -->
 <html class = "dark" lang = "en" style="color-scheme: dark;"> 
-<link rel="stylesheet" href="C:\Users\Rad\Documents\HTML & CSS\envious.css">
-<link rel="icon" href="C:\Users\Rad\Documents\HTML & CSS\favicon.ico" type="image-x/icon">
+<link rel="stylesheet" href="envious.css">
+<link rel="icon" href="favicon.ico" type="image-x/icon">
 <meta name="viewport" content="width=device-width, initial scale-=1">
 <meta name="description" content="ARCHIVES AND SOCIALS Built in a compact style website.">
 <!-- YOUR HTML -->
