FIX ON VIEWPORT

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class = "dark" lang = "en" style="color-scheme: dark;"> 
 <link rel="stylesheet" href="envious.css">
 <link rel="icon" href="favicon.ico" type="image-x/icon">
-<meta name="viewport" content="width=device-width, initial scale-=1">
+<meta name="viewport" content="width=device-width, initial scale=1">
 <meta name="description" content="ARCHIVES AND SOCIALS Built in a compact style website.">
 <!-- YOUR HTML -->
     <head>
